--- a/lesson4/index.html
+++ b/lesson4/index.html
@@ -9,6 +9,7 @@
 <nav>
     <ul>
         <li><a href="request_response.php?id=34">Ссылка</a></li>
+        <li><a href="form/form.php">Форма</a></li>
     </ul>
 </nav>
 
